Update Ruru to 0.8.0

--- a/ext/trusted/Cargo.toml
+++ b/ext/trusted/Cargo.toml
@@ -8,4 +8,4 @@ crate-type = ["dylib"]
 
 [dependencies]
 hyper = "0.9.10"
-ruru = { path = "../../../rust/ruru" }
+ruru = { path = "../../../../rust/ruru" }
