--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,11 @@
 /spec/reports/
 /tmp/
 
-ext/trusted/target
-ext/trusted/Cargo.lock
+/ext/trusted/target
+/ext/trusted/Cargo.lock
 
-lib/*.bundle
-lib/*.dylib
-lib/*.so
+/lib/*.bundle
+/lib/*.dylib
+/lib/*.so
+
+*.log
